--- a/EventApp/EventApp/Features/UI/Base.lproj/Main.storyboard
+++ b/EventApp/EventApp/Features/UI/Base.lproj/Main.storyboard
@@ -252,7 +252,7 @@
             </objects>
             <point key="canvasLocation" x="5357.6000000000004" y="4126.6866566716644"/>
         </scene>
-        <!--Pontverseny-->
+        <!--Leírás-->
         <scene sceneID="pU5-jr-MaE">
             <objects>
                 <viewController id="xOH-KZ-B2W" sceneMemberID="viewController">
@@ -263,45 +263,15 @@
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Xta-zG-Gdg">
                                 <rect key="frame" x="10" y="74" width="355" height="544"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35T-pG-geN">
-                                        <rect key="frame" x="0.0" y="0.0" width="355" height="88.5"/>
-                                        <string key="text">A túra során mindenkinek lehetősége lesz egy átfogó pontgyűjtő versenyben való részvételre. Az összesített ranglista első három helyezettjét értékes ajándékokkal jutamazzuk.                      </string>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35T-pG-geN">
+                                        <rect key="frame" x="0.0" y="0.0" width="355" height="544"/>
+                                        <string key="text">210 kilométert teszünk meg 3 nap alatt a Balatont körülölelő kerékpárúton. Látványos kilátópontok, strandok és kisvárosok esnek utunkba. Balatonvilágosról indulunk, először az északi parton tekerünk végig, majd a déli partvidék következik. 
+Hosszabban időzünk Balatonfüreden, Tihanyban, a Badacsony oldalában és a Szigligeti várnál. 
+A csomagszállítást és a kerékpárokat irodánk biztosítja, de hozhatod a saját kétkerekűdet is.</string>
+                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                         <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Eredményhirdetés:    " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cOf-iU-VNQ">
-                                        <rect key="frame" x="0.0" y="98.5" width="355" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keszthely, 2018. július 28. 21:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n09-gm-FCJ">
-                                        <rect key="frame" x="0.0" y="126.5" width="355" height="18"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pontszerzési lehetőségek:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I8Z-0E-k4h">
-                                        <rect key="frame" x="0.0" y="154.5" width="355" height="17.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="3TC-Vo-hhe">
-                                        <rect key="frame" x="0.0" y="182" width="355" height="362"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gb5-Yi-B5e">
-                                                <rect key="frame" x="0.0" y="28" width="355" height="44"/>
-                                                <autoresizingMask key="autoresizingMask"/>
-                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gb5-Yi-B5e" id="esr-hL-FYx">
-                                                    <rect key="frame" x="0.0" y="0.0" width="355" height="43.5"/>
-                                                    <autoresizingMask key="autoresizingMask"/>
-                                                </tableViewCellContentView>
-                                            </tableViewCell>
-                                        </prototypes>
-                                    </tableView>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -314,7 +284,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="uBA-Ia-CMI"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Pontverseny" id="BDK-vy-4Q0"/>
+                    <navigationItem key="navigationItem" title="Leírás" id="BDK-vy-4Q0"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eP6-bK-eeI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -682,7 +652,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="center" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="S8E-GC-wmt">
-                                <rect key="frame" x="0.0" y="64" width="375" height="513"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="493"/>
                                 <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="contactcell" rowHeight="113" id="WQK-Kz-yL2" customClass="ContactTableViewCell" customModule="EventApp" customModuleProvider="target">
@@ -748,10 +718,13 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FWa-Ps-FGo">
-                                <rect key="frame" x="10" y="577" width="175" height="30"/>
+                                <rect key="frame" x="0.0" y="557" width="375" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="TPn-6r-eif"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                 <state key="normal" title="Adatkezelési tájékoztató">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="0.49803921569999998" green="0.77647058820000003" blue="0.8862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="IqH-q9-5TQ" kind="show" id="f3F-NM-P8r"/>
@@ -760,10 +733,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="FWa-Ps-FGo" firstAttribute="leading" secondItem="lOg-qQ-sfq" secondAttribute="leading" id="5rX-Ne-WdK"/>
                             <constraint firstItem="lOg-qQ-sfq" firstAttribute="bottom" secondItem="FWa-Ps-FGo" secondAttribute="bottom" constant="11" id="6q8-nc-ur8"/>
                             <constraint firstItem="S8E-GC-wmt" firstAttribute="top" secondItem="lOg-qQ-sfq" secondAttribute="top" id="L0a-34-0kA"/>
-                            <constraint firstItem="FWa-Ps-FGo" firstAttribute="leading" secondItem="lOg-qQ-sfq" secondAttribute="leading" constant="10" id="XQT-5S-xe7"/>
-                            <constraint firstItem="FWa-Ps-FGo" firstAttribute="top" secondItem="S8E-GC-wmt" secondAttribute="bottom" id="eEp-Kg-cDD"/>
+                            <constraint firstItem="lOg-qQ-sfq" firstAttribute="trailing" secondItem="FWa-Ps-FGo" secondAttribute="trailing" id="Xrp-jV-EKE"/>
+                            <constraint firstItem="FWa-Ps-FGo" firstAttribute="top" secondItem="S8E-GC-wmt" secondAttribute="bottom" id="anJ-6r-xVY"/>
                             <constraint firstItem="S8E-GC-wmt" firstAttribute="leading" secondItem="lOg-qQ-sfq" secondAttribute="leading" id="q4a-9d-Nim"/>
                             <constraint firstItem="S8E-GC-wmt" firstAttribute="trailing" secondItem="lOg-qQ-sfq" secondAttribute="trailing" id="qcQ-Iy-LrZ"/>
                         </constraints>
